[package]
name = "dropbox-connector-shuttle"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
shuttle-service = { version = "0.5.0", features = ["web-axum"] }
axum = { version = "0.5.15", features = ["multipart"] }
sync_wrapper = "0.1.1"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
lazy_static = "1.4.0"
rsa = "0.6.0"
rand = "0.8.5"
rand_chacha = "0.3"
hex = "0.4.0"
urlencoding = "2.1.0"
base64 = "0.13.0"
reqwest = { version = "0.11", features = ["json", "multipart"] }
